--- a/frontend/apps/platform/src/assets/styles/base/base.css
+++ b/frontend/apps/platform/src/assets/styles/base/base.css
@@ -8,6 +8,6 @@
   }
 
   body {
-    @apply flex flex-col min-h-full h-full;
+    @apply flex flex-col min-h-full h-full bg-skin-fill text-skin-base;
   }
 }
