Added fonts, content queries, url structure, pages

--- a/frontend/apps/platform/src/assets/styles/base/themes.css
+++ b/frontend/apps/platform/src/assets/styles/base/themes.css
@@ -10,6 +10,7 @@
     /* --color-button-accent: #ffffff; */
     /* --color-button-accent-hover: #ffffff; */
     /* --color-button-muted: #a0aec0; */
+    --color-background-base: 255, 255, 255;
   }
   
   .theme-dark {
