--- a/frontend/apps/platform/src/assets/styles/base/base.css
+++ b/frontend/apps/platform/src/assets/styles/base/base.css
@@ -8,6 +8,10 @@
   }
 
   body {
-    @apply flex flex-col min-h-full h-full bg-skin-fill text-skin-base;
+    @apply flex flex-col min-h-full h-full bg-fill text-base;
+  }
+
+  .link {
+    @apply text-secondary hover:text-secondary-dark active:text-secondary/80;
   }
 }
