--- a/frontend/apps/platform/src/assets/styles/base/themes.css
+++ b/frontend/apps/platform/src/assets/styles/base/themes.css
@@ -5,7 +5,7 @@
   :root,
   .theme-light {
     /* TEXT COLORS */
-    --color-text-base: 100, 116, 139;
+    --color-text-base: 13, 12, 34;
     --color-text-neutral-50: 250, 250, 250;
     --color-text-neutral-950: 10, 10, 10;
     /* --color-text-muted: #a0aec0; */
@@ -27,18 +27,18 @@
     /* --color-border-base: #e2e8f0; */
 
     /* SEMANTIC COLORS */
-    --color-semantic-error-50: rgb(229, 115, 115);
-    --color-semantic-error-100: rgb(244, 67, 54);
-    --color-semantic-error-150: rgb(211, 47, 47);
-    --color-semantic-success-50: rgb(129, 199, 132);
-    --color-semantic-success-100: rgb(102, 187, 106);
-    --color-semantic-success-150: rgb(56, 142, 60);
-    --color-semantic-warning-50: rgb(255, 183, 77);
-    --color-semantic-warning-100: rgb(255, 167, 38);
-    --color-semantic-warning-150: rgb(245, 124, 0);
-    --color-semantic-info-50: rgb(79, 195, 247);
-    --color-semantic-info-100: rgb(41, 182, 246);
-    --color-semantic-info-150: rgb(2, 136, 209);
+    --color-semantic-error-50: 229, 115, 115;
+    --color-semantic-error-100: 244, 67, 54;
+    --color-semantic-error-150: 211, 47, 47;
+    --color-semantic-success-50: 129, 199, 132;
+    --color-semantic-success-100: 102, 187, 106;
+    --color-semantic-success-150: 56, 142, 60;
+    --color-semantic-warning-50: 255, 183, 77;
+    --color-semantic-warning-100: 255, 167, 38;
+    --color-semantic-warning-150: 245, 124, 0;
+    --color-semantic-info-50: 79, 195, 247;
+    --color-semantic-info-100: 41, 182, 246;
+    --color-semantic-info-150: 2, 136, 209;
   }
 
   .theme-dark {
