--- a/frontend/apps/platform/src/assets/styles/rich-content/rich-article.css
+++ b/frontend/apps/platform/src/assets/styles/rich-content/rich-article.css
@@ -1,32 +1,29 @@
 @layer base {
   .rich-article {
-    @apply text-lg;
+    @apply text-base text-[#6e6d7a];
   }
   .rich-article h1 {
-    @apply h3 mt-16 mb-4;
+    @apply h3 normal-case mt-16 mb-4 text-primary-950;
   }
 
   .rich-article h2 {
-    @apply h4 normal-case mt-14 mb-4;
+    @apply h4 normal-case mt-14 mb-4 text-primary-950;
   }
 
   .rich-article h3 {
-    @apply h5 normal-case;
+    @apply h5 normal-case mt-14 mb-4 text-primary-950;
   }
 
   .rich-article h4 {
-    @apply h6 normal-case;
+    @apply h6 normal-case mt-14 mb-4 text-primary-950;
   }
 
   .rich-article h5 {
-    @apply h6;
+    @apply text-lg font-black mt-14 mb-4 text-primary-950;
   }
 
-  .rich-article h3,
-  .rich-article h4,
-  .rich-article h5,
   .rich-article h6 {
-    @apply mt-14 mb-4;
+    @apply text-base font-black mt-14 mb-4 text-primary-950;
   }
 
   .rich-article p {
@@ -38,11 +35,11 @@
   }
 
   .rich-article img figcaption {
-    @apply footnote ml-auto block text-right;
+    @apply text-xs ml-auto block text-right;
   }
 
   .rich-article blockquote {
-    @apply flex gap-5 body1 my-6 rounded-md bg-sky-100 py-4 px-5 text-primary-light;
+    @apply flex flex-col gap-5 text-sm my-6 rounded-md bg-violet-400/20 py-4 px-5 text-primary-950 border-l-4 border-violet-300;
   }
 
   .rich-article blockquote .icon {
@@ -54,7 +51,7 @@
   }
 
   .rich-article a {
-    @apply link underline;
+    @apply underline font-bold text-primary-950 hover:text-secondary-600 active:text-secondary-600/75 duration-200 ease-in-out;
   }
 
   .rich-article ul {
